--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "sass": "^1.58.3",
+    "standard": "^17.0.0",
     "vite": "^4.0.0"
+  },
+  "eslintConfig": {
+    "extends":"./node_modules/standard/eslintrc.json"
   }
 }
